# claude-line

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.claude/: settings.json
.github/workflows/: ci.yml
src/: claude-session.js  config.js  generate-cert.js  server.js  text-cleanup.js  transcription.js
src/claudeline/: __main__.py  claude_code_manager.py  config.py  generate_cert.py  server.py  text_cleanup.py  transcription.py
src/claudeline/static/: index.html
src/static/: index.html
tests/: claude-session.test.js  config.test.js  generate-cert.test.js  server.test.js  test_claude_code_manager.py  test_config.py  test_generate_cert.py  test_server.py  test_text_cleanup.py  text-cleanup.test.js  transcription.test.js
