[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "claudeline"
version = "0.0.1"
description = "A voice-first mobile interface for driving Claude Code from a phone/tablet"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dr. Matthias Hölzl", email = "tc@xantira.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer~=0.15.3",
    "click~=8.1.0", # Typer 0.15.x does not work with newer versions of click
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.23.0",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
    "bump2version>=1.0.1",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.23.0",
    "tox>=4.34.1",
    "tox-uv>=1.29.0",
    "bump2version>=1.0.1",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[project.urls]
Homepage =  "https://github.com/hoelzl/claude-line/"
"Bug Tracker" = "https://github.com/hoelzl/claude-line/issues"

[project.scripts]
claude-line = "claudeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claudeline = ["static/**/*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
